# TinyBots

./: LICENSE  docker-compose.yml
trans_rights_bot/: .gitignore  Cargo.toml  Dockerfile
trans_rights_bot/docker_runtime/: bot.crontab  tweet.sh
trans_rights_bot/src/: main.rs
